# neural-network-in-python

./: .gitignore  LICENSE  README.md  iris_dataset.json  main.py  pyproject.toml
tests/: test_activation_functions.py  test_fnn.py  test_layer.py  test_weight.py  test_z_score_normalization.py
